# opr

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  acconfig.h  aclocal.m4  build.sh  configure  configure.in
debian/: changelog  control  copyright  dirs  docs  postinst  postrm  rules
libltdl/: configure
redhat/: opr.spec
src/: Makefile.am  Makefile.in  config.h.in  opr.8  opr.c  oprdefs.h.in  oprora.c  oprora.h
